// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifGrid Test Test 1 - Enzyme: GifGrid should be render correctly 1`] = `
<Fragment>
  <h4>
    HIMYM
  </h4>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`GifGrid Test Test 2 - Enzyme: GifGrid should render elements when loading images with Fetch 1`] = `
<Fragment>
  <h4>
    HIMYM
  </h4>
  <div
    className="card-grid"
  >
    <GifGridItems
      id="ABC"
      key="ABC"
      title="ABC Title"
      url="https://google.com"
    />
  </div>
</Fragment>
`;
